secondapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secondapp-deployment
  namespace: firstapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secondapp-web
  template:
    metadata:
      labels:
        app: secondapp-web
    spec:
      containers:
      - name: secondapp
        image: 149536497934.dkr.ecr.ap-south-1.amazonaws.com/secondapp:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: secondapp-service
  namespace: firstapp
spec:
  selector:
    app: secondapp-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  #type: ClusterIP     #Only for Fargate type of EKS
  type: NodePort      #For EC2-node type of eks , alb look for node-ip's to target it to.
