simplemsgapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplemsgapp-deployment
  namespace: project-4-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simplemsgapp-web
  template:
    metadata:
      labels:
        app: simplemsgapp-web
    spec:
      imagePullSecrets:
      - name: my-registry-key
      containers:
      - name: simplemsgapp
        image: 149536497934.dkr.ecr.ap-south-1.amazonaws.com/simplemsgapp:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: simplemsgapp-service
  namespace: project-4-namespace
spec:
  selector:
    app: simplemsgapp-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
